# otus.homework.3

./: .gitignore  CMakeLists.txt  README.md  main.cxx
.github/workflows/: releaase.yml
